
2007-12-04  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* interfaces/python/src/graphobject.c
	(igraphmodule_Graph_{count,get}_[sub]isomorphisms) : added
	
	* interfaces/python/src/graphobject.c
	(igraphmodule_Graph_subisomorphic) : added
	
	* interfaces/python/package/test/isomorphism.py : added tests

2007-12-03  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/revolver_ml_cit.c (igraph_revolver_ml_d, igraph_revolver_ml_de)
	(igraph_revolver_ml_ade, igraph_revolveR_ml_ad) : filter argument added

2007-11-29  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/revolver_ml_cit.c (igraph_revolver_ml_l) : added

2007-11-28  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/revolver_ml_cit.c (igraph_revolver_probs_de)
	(igraph_revolver_probs_ade) : added

2007-11-27  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/revolver_ml_cot.c (igraph_revolver_ml_de, igraph_revolver_ml_ade) :
	added

	* src/games.c (igraph_callaway_traits_game, igraph_establisment_game)
	(igraph_cited_type_game) : bugs fixed

2007-11-26  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/revolver_ml_cit.c (igraph_revolver_probs_d)
	(igraph_revolver_probs_ad) : added

	* src/revolver_ml_cit.c (igraph_revolver_ml_AD_dpareto_eval) : bug fixed

2007-11-24  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/iterators.c (igraph_es_vector_copy) : added

	* src/structural_properties.c (igraph_count_multiple) : now handles
	loop edges properly

2007-11-22  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/revolver_ml_cit.c (igraph_revolver_ml_AD_dpareto_eval) : added

	* src/revolver_ml_cit.c (igraph_revolver_ml_D_alpha_a)
	(igraph_revolver_ml_AD_alpha_a_beta, igraph_revolver_ml_AD_dpareto) :
	small memory leaks removed

	* src/revolver_ml_cit.c (igraph_revolver_ml_AD) : added 'lastderiv'
	argument
	
	* src/revolver_ml_cit.c (igraph_i_revolver_ml_D_eval)
	(igraph_i_revolver_ml_AD_eval) : divide by the number of experiments

2007-11-21  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/centrality.c (igraph_betweenness_estimate, igraph_closeness_estimate)